SDE-14, added : symbol to label.

--- a/custompage_SDEdashboard/index.html
+++ b/custompage_SDEdashboard/index.html
@@ -258,7 +258,7 @@
 							<td>{{dashctrl.detailHistory.sdestatus}}</td>
 						</tr>
 							
-						<tr><td style="background-color: #ADADF5">Scheduled Online Date</td>
+						<tr><td style="background-color: #ADADF5">Scheduled Online Date:</td>
 							<td style="text-align: center;">Y</td>
 							<td>{{dashctrl.detailHistory.ScheduledOnlineDate  | date:'dd-MM-yyyy'}}</td>
 							<td ng-show="dashctrl.isshowdetailcontributor">{{dashctrl.detailHistoryDataContributor.ScheduledOnlineDate}}</td>
