--- a/custompage_SDEdashboard/index.html
+++ b/custompage_SDEdashboard/index.html
@@ -182,7 +182,7 @@
 										Blue and Green buttons are no longer needed.
 										<div ng-show="onetask.initiateSdeRequest">
 									-->									
-									<div>
+									<div ng-show="onetask.INITIATED == 'N'"> 									
 										<button ng-click="dashctrl.initiateSdeRequestbutton( headerlabel, onetask)" class="btn btn-xs  btn-warning"
 										style="background-color: #f39c12;border-color: #f39c12;padding: 0px 10px;">Initiate SDE Request</button>
 										
