--- a/custompage_SDEdashboard/index.html
+++ b/custompage_SDEdashboard/index.html
@@ -453,7 +453,7 @@
 							class="form-control filter-control"								
 							title="Filter: only lines which contains this value are shown"/>	
 			</th>
-			<th><span class="table-header">UWO</span>
+			<th><span class="table-header">UWI</span>
 				<input type="text" ng-model="dashctrl.systemSummary.filter.UWI" size="10" 
 							class="form-control filter-control"								
 							title="Filter: only lines which contains this value are shown"/>	
@@ -488,7 +488,7 @@
 			<th><span class="table-header">Actual</span></th>
 			<th><span class="table-header">Well Data</span></th>
 			<th><span class="table-header">Comp Data</span></th>
-			<th><span class="table-header">Resp officier</span></th>
+			<th><span class="table-header">Resp Officer</span></th>
 			<th><span class="table-header">EC</span></th>
 			<th><span class="table-header">Enable</span></th>
 			<th><span class="table-header">Ampla</span></th>
