--- a/custompage_SDEdashboard/index.html
+++ b/custompage_SDEdashboard/index.html
@@ -77,21 +77,21 @@
 		<div style="background-color: #237CCB;">
 			<table><tr>
 			<td>
-				<button ng-click="dashctrl.showViewForm();" ng-class="dashctrl.getButtonClass( dashctrl.isshowcases)">Well Tracker Dashboard</button>
+				<button ng-show="dashctrl.allowROView()" ng-click="dashctrl.showViewForm();" ng-class="dashctrl.getButtonClass( dashctrl.isshowcases)">Well Tracker Dashboard</button>
 			</td><td style="background-color: #237CCB; color:#FFFFFF;">&nbsp;&nbsp;</td>
 			<td>
-				<button ng-click="dashctrl.showViewUpdateSde();" ng-class="dashctrl.getButtonClass( dashctrl.isshowUpdateSdeDetails)">Update SDE Details</button>
+				<button ng-show="dashctrl.allowROView()" ng-click="dashctrl.showViewUpdateSde();" ng-class="dashctrl.getButtonClass( dashctrl.isshowUpdateSdeDetails)">Update SDE Details</button>
 			</td><td style="background-color: #237CCB; color:#FFFFFF;">&nbsp;&nbsp;</td>
 			<td>
-				<button ng-click="dashctrl.showViewSystemSummary();" ng-class="dashctrl.getButtonClass( dashctrl.isshowSystemSummary)">System Summary</button>
+				<button ng-show="dashctrl.allowROView() || dashctrl.allowPAView() || dashctrl.allowAdminView()" ng-click="dashctrl.showViewSystemSummary();" ng-class="dashctrl.getButtonClass( dashctrl.isshowSystemSummary)">System Summary</button>
 			</td><td style="background-color: #237CCB; color:#FFFFFF;">&nbsp;&nbsp;</td>
 			<td>
-				<button ng-click="dashctrl.showViewPADashboard();" 
+				<button ng-show="dashctrl.allowPAView()" ng-click="dashctrl.showViewPADashboard();" 
 						ng-class="dashctrl.getButtonClass( dashctrl.isshowPADashboard)">PA Dashboard</button>
 			</td>
 			<td style="background-color: #237CCB; color:#FFFFFF;">&nbsp;&nbsp;</td>
 			<td>
-				<button ng-show="dashctrl.allowPropertiesView()" 
+				<button ng-show="dashctrl.allowPropertiesView() && dashctrl.allowAdminView()" 
 					ng-click="dashctrl.showProperties();" ng-class="dashctrl.getButtonClass( dashctrl.isshowProperties)">Properties</button>
 			</td>
 			</tr>
@@ -109,7 +109,7 @@
 	<!--                                                                                  -->
 	<!-- ******************************************************************************** -->
 
-	<div class="col-lg-11"  style="margin-left:35px" ng-show="dashctrl.isshowcases">
+	<div class="col-lg-11"  style="margin-left:35px" ng-show="dashctrl.isshowcases && dashctrl.allowROView()">
 		<h1>Well Tracker Dashboard</h1>		
 		<div class="row voffset2">			
 			<div class="col-md-2">
@@ -119,7 +119,7 @@
 		</div>
 			
 			
-		<div class="row voffset2">
+		<div class="row voffset2" ng-show="dashctrl.allowROView()">
 			<div class="col-md-6">
 				<form class="form-inline">
 					<div class="form-group" ng-show="dashctrl.properties.debug=='true'">
@@ -140,7 +140,7 @@
 				
 				
 			
-		<div class="row voffset2">
+		<div class="row voffset2" ng-show="dashctrl.allowROView()">
 			<div class="col-md-12">
 				<table class="table table-striped table-condensed  table-bordered">
 					<thead>
@@ -566,7 +566,7 @@
 	<!--                                                                                  -->
 	<!--                                                                                  -->
 	<!-- ******************************************************************************** -->
-	<div class="col-lg-11" ng-show="dashctrl.isshowUpdateSdeDetails">
+	<div class="col-lg-11" ng-show="dashctrl.isshowUpdateSdeDetails && dashctrl.allowROView()">
 		<h1>Update SDE Details</h1>
 			
 		<table class="table table-condensed table-bordered" style="background-color: #ADADF5;" >
@@ -637,7 +637,7 @@
 	<!--                                                                                  -->
 	<!--                                                                                  -->
 	<!-- ******************************************************************************** -->
-	<div class="col-lg-11" ng-show="dashctrl.isshowPADashboard" style="margin-left:35px">
+	<div class="col-lg-11" ng-show="dashctrl.isshowPADashboard && dashctrl.allowPAView()" style="margin-left:35px">
 		<h1>PA Dashboard</h1>
 		
 		<br/><br/>
@@ -767,7 +767,7 @@
 	<!--                                                                                  -->
 	<!--                                                                                  -->
 	<!-- ******************************************************************************** -->
-<div class="col-lg-11" ng-show="dashctrl.isshowProperties" style="margin-left:35px">
+<div class="col-lg-11" ng-show="dashctrl.isshowProperties && dashctrl.allowAdminView()" style="margin-left:35px">
 		<h1>Properties</h1>
 		
 		Update Sde URL : <input ng-model="dashctrl.properties.updatesdeurl" size="60"><p>
