--- a/custompage_SDEdashboard/index.html
+++ b/custompage_SDEdashboard/index.html
@@ -18,6 +18,7 @@
 	<!-- <link rel="stylesheet" href="pageResource?page=custompage_SDEdashboard&location=style/style.css"> -->
 	<link rel="stylesheet" href="pageResource?page=custompage_SDEdashboard&location=style/santos.css">
 	<link rel="stylesheet" href="pageResource?page=custompage_SDEdashboard&location=style/ng-modal.css">
+	<link rel="stylesheet" href="pageResource?page=custompage_SDEdashboard&location=style/santos-sde-custom.css">
 
 	<!-- comment this two lines to get back the BootStrap look and feel  -->
 	<!-- <link rel="stylesheet" type="text/css" href="themeResource?theme=portal&amp;location=bonita.css">
@@ -406,7 +407,7 @@
 	<!-- ******************************************************************************** -->
 	<div class="col-lg-11" ng-show="dashctrl.isshowSystemSummary">
 		<h1>System Summary</h1>
-		<table class="table table-condensed table-bordered" style="background-color: #ADADF5;" >
+		<table class="table table-condensed table-bordered" style="background-color: #EEEEEE;" >
 		<tr><td colspan="4"><h2>Search</h2></td></tr>
 		<tr>
 			<td >UWI:</td><td><input type="text" ng-model="dashctrl.systemSummary.search.filteruwi"></td>
@@ -569,7 +570,7 @@
 	<div class="col-lg-11" ng-show="dashctrl.isshowUpdateSdeDetails && dashctrl.allowROView()">
 		<h1>Update SDE Details</h1>
 			
-		<table class="table table-condensed table-bordered" style="background-color: #ADADF5;" >
+		<table class="table table-condensed table-bordered" style="background-color: #EEEEEE;" >
 		<tr><td colspan="4"><h2>Search</h2></td></tr>
 		<tr>
 			<td >UWI:</td><td><input type="text" ng-model="dashctrl.updatesdedetails.search.filteruwi"></td>
