--- a/custompage_SDEdashboard/index.html
+++ b/custompage_SDEdashboard/index.html
@@ -506,7 +506,7 @@
 			<tbody  ng-repeat="onesynthesis in dashctrl.getSystemSummaryPage() track by $index">
 			<tr >
 				<td>{{onesynthesis.SDE_NUMBER}}</td>
-				<td>{{onesynthesis.UWI}}</td>
+				<td>{{onesynthesis.WELL_CODE}}</td>
 				<td>{{onesynthesis.WELL_FULL_NAME}}</td>
 				<td>{{onesynthesis.REQUEST_TYPE}}</td>
 				<td>{{onesynthesis.BUSINESS_UNIT}}</td>
